--- a/Test_Game_Development_In_Swift/Test_Game_Development_In_Swift/Base.lproj/LaunchScreen.storyboard
+++ b/Test_Game_Development_In_Swift/Test_Game_Development_In_Swift/Base.lproj/LaunchScreen.storyboard
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.65627189730000002" blue="0.63797433039999996" alpha="1" colorSpace="deviceRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
